refactor: Refatorando e extraindo credenciais para variaveis de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-id=${GCP_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GCP_CLIENT_SECRET}
